--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-# Core requirements
 streamlit==1.32.0
-opencv-python-headless==4.9.0.80
+ultralytics==8.0.230
+opencv-python==4.9.0.80
 numpy==1.26.4
 Pillow==10.2.0
-ultralytics==8.1.24
-
-# Email and networking
-email-validator==2.1.1
-
-# Location services
 geocoder==1.38.1
-
-# Additional dependencies
+smtplib==0.0.1
+email-validator==2.1.1
 python-dotenv==1.0.1
-requests==2.31.0
+scipy==1.12.0
 torch==2.2.1
 torchvision==0.17.1
+tqdm==4.66.2
+pandas==2.2.1
+requests==2.31.0
+matplotlib==3.8.3
+seaborn==0.13.2
