--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-streamlit==1.32.0
-ultralytics==8.0.230
-opencv-python==4.9.0.80
-numpy==1.26.4
-Pillow==10.2.0
-geocoder==1.38.1
-smtplib==0.0.1
-email-validator==2.1.1
-python-dotenv==1.0.1
-scipy==1.12.0
-torch==2.2.1
-torchvision==0.17.1
-tqdm==4.66.2
-pandas==2.2.1
-requests==2.31.0
-matplotlib==3.8.3
-seaborn==0.13.2
+streamlit
+ultralytics
+opencv-python
+numpy
+Pillow
+geocoder
+email-validator
+python-dotenv
+scipy
+torch
+torchvision
+tqdm
+pandas
+requests
+matplotlib
+seaborn
+smtplib
