--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,10 @@
-streamlit
-ultralytics
-opencv-python
-numpy
-Pillow
-geocoder
-email-validator
-python-dotenv
-scipy
-torch
-torchvision
-tqdm
-pandas
-requests
-matplotlib
-seaborn
-smtplib
+streamlit>=1.32.0
+ultralytics>=8.0.230
+opencv-python-headless>=4.9.0.80
+numpy>=1.26.4
+Pillow>=10.2.0
+geocoder>=1.38.1
+python-dotenv>=1.0.1
+torch>=2.2.1 --index-url https://download.pytorch.org/whl/cpu
+torchvision>=0.17.1
+tqdm>=4.66.2
