--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,17 @@
-# Core Computer Vision
-ultralytics
-opencv-python
-numpy
-Pillow
-torch
-torchvision
+# Core Application Dependencies
+streamlit>=1.32.0
+ultralytics>=8.0.230
+opencv-python-headless>=4.9.0.80
+numpy>=1.26.4
+Pillow>=10.2.0
+geocoder>=1.38.1
+python-dotenv>=1.0.1
+requests>=2.31.0
+tqdm>=4.66.2
+pandas>=2.2.1
+matplotlib>=3.8.3
+seaborn>=0.13.2
 
-# Web Application
-streamlit
-geocoder
-
-# Email & Alerts
-smtplib
-email-validator
-email
-
-# Data Processing & Utilities
-matplotlib
-ipython
-python-dotenv
-tqdm
-shutilwhich
-
-# Model Formats
-onnx
-onnxruntime
-
-# Roboflow Integration
-roboflow
+# Email Functionality
+secure-smtplib>=0.1.1
+pyopenssl>=23.3.0
