--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
-# Core ML & CV Libraries
-opencv-python-headless>=4.5.0
-numpy>=1.19.0
-Pillow>=8.0.0
+streamlit>=1.24.0
+opencv-python>=4.7.0
+numpy>=1.24.0
+Pillow>=9.5.0
 ultralytics>=8.0.0
-roboflow>=1.0.0
-matplotlib>=3.3.0
-
-# Web Application
-streamlit>=1.10.0
-
-# Location & Mapping
 geocoder>=1.38.1
-
-# For Google Colab integration (if needed)
-# google-colab  # Commented out as not needed in cloud deployment
-
-# Optional for output and visualization improvements
-ipython>=7.0.0
+smtplib-python>=0.1.2
+email-validator>=2.0.0
+python-dateutil>=2.8.2
