--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-streamlit>=1.24.0
-opencv-python-headless>=4.7.0
-numpy>=1.24.0
-Pillow>=9.5.0
-ultralytics>=8.0.0
-geocoder>=1.38.1
-python-dateutil>=2.8.2
-email-validator>=2.0.0
+streamlit==1.32.2
+opencv-python==4.9.0.80
+numpy==1.26.4
+Pillow==10.2.0
