--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.31.0
-opencv-python-headless==4.8.1.78
 numpy==1.26.3
 Pillow==10.2.0
+libgl1-mesa-glx
+ffmpeg
+opencv-python-headless==4.8.1.78
 ultralytics==8.1.2
 geocoder==1.38.1
-smtplib3==0.0.1
-torch==2.1.2
-torchvision==0.16.2
-torchaudio==2.1.2
+torch==2.1.2 --extra-index-url https://download.pytorch.org/whl/cpu
+torchvision==0.16.2 --extra-index-url https://download.pytorch.org/whl/cpu
