--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit==1.31.0
-numpy==1.26.3
-Pillow==10.2.0
-libgl1-mesa-glx
-ffmpeg
-opencv-python-headless==4.8.1.78
-ultralytics==8.1.2
+streamlit==1.32.0
+numpy==1.26.0
+Pillow==10.0.1
+ultralytics==8.0.196
+opencv-python==4.8.1.78
 geocoder==1.38.1
-torch==2.1.2 --extra-index-url https://download.pytorch.org/whl/cpu
-torchvision==0.16.2 --extra-index-url https://download.pytorch.org/whl/cpu
+smtplib==0.0.1
+email-validator==2.0.0
+python-dotenv==1.0.0
